# imd

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: test.yml
src/: app_config.rs  main.rs
src/metadata/: itunes_metadata_extractor.rs  metadata_comparator.rs  metadata_fixer.rs  mod.rs  song_metadata.rs
tests/: integration_test.rs
